fixed horizontal scroll one easter egg

--- a/style.css
+++ b/style.css
@@ -3,6 +3,8 @@
 /* Element Selectors */
 html, body {
   height: 100%;
+  max-width: 100%;
+  overflow-x: hidden;
 }
 
 html, body, footer, footer a {
@@ -237,9 +239,6 @@ img.mr-2 {
 
 }
 
-
-
-
 #ele {
   position: relative;
   left: 100%;
@@ -253,7 +252,7 @@ img.mr-2 {
   display: none;
   position:absolute;
   z-index: 1;
-	left:-5%; /* Set initial position for each image off-screen left -- adjust according to image width */
+	left:-25%; /* Set initial position for each image off-screen left -- adjust according to image width */
 	animation:mymove 8s infinite;	/* total animation time for each image is 8 seconds, loops forever */
 	animation-direction:normal;	
 	animation-delay:0s;
@@ -262,6 +261,6 @@ img.mr-2 {
 
 @keyframes mymove
 	{
-	from {left:-5%;}	/*off-screen left (adjust for image width)*/
+	from {left:-0%;}	/*off-screen left (adjust for image width)*/
 	to {left:100%;}		/*off-screen right*/
 	}
